--- a/neetcodeCont.ipynb
+++ b/neetcodeCont.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "aecabd0f-d8b3-4155-922d-0b828a23be7b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
-    "from typing import Optional, List"
+    "from typing import Optional, List\n",
+    "import heapq"
    ]
   },
   {
@@ -121,12 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "ac877ea9-53ab-4d2d-82fd-608ac1caf78f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# solution\n",
+    "# solution -> heap\n",
     "# time complexity: O(m * log k) -> where m is the number of calls made to add()\n",
     "# space complexity: O(k)\n",
     "\n",
@@ -182,7 +183,174 @@
     "\n",
     "![leetcode703.png](attachment:cbac7f94-965b-44e4-aa52-1b4f8d4dbd8f.png)\n",
     "\n",
-    "follow up: can you find a different way to implement the add (still using heap?)"
+    "doc for heapq: https://docs.python.org/3/library/heapq.html\n",
+    "\n",
+    "follow up: can you find a different ways to implement the add (still using heap?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c15b3fcf-e8f5-4108-b0c7-b0d3e56c5a07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class KthLargest:\n",
+    "\n",
+    "    def __init__(self, k: int, nums: List[int]):\n",
+    "        pass\n",
+    "        \n",
+    "    def add(self, val: int) -> int:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "230a68b0-fec6-4b61-bd77-defb1bc00fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 7, 4, 8, 10]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# some tests\n",
+    "lst = [4,7,3,8,10]\n",
+    "heapq.heapify(lst)\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7af1c42d-e57a-4b8f-8492-a882dec0845d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 1046. Last Stone Weight (easy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d338fbf7-36d6-4948-9b14-a5a1707f138b",
+   "metadata": {},
+   "source": [
+    "You are given an array of integers stones where stones[i] is the weight of the ith stone.\n",
+    "\n",
+    "We are playing a game with the stones. On each turn, we choose the heaviest two stones and smash them together. Suppose the heaviest two stones have weights x and y with x <= y. The result of this smash is:\n",
+    "\n",
+    "* If x == y, both stones are destroyed, and\n",
+    "* If x != y, the stone of weight x is destroyed, and the stone of weight y has new weight y - x.\n",
+    "\n",
+    "At the end of the game, there is at most one stone left.\n",
+    "\n",
+    "Return the weight of the last remaining stone. If there are no stones left, return 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f5b582f1-bc50-488e-b85b-8f3722282a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "\n",
+    "class Solution:\n",
+    "    def lastStoneWeight(self, stones: List[int]) -> int:\n",
+    "        # how can i most efficiently retrieve the max 2 values/sort the array?\n",
+    "        # apparently i can't have a heap that pops the biggest value? that's what i wanted to use\n",
+    "        \n",
+    "        while len(stones) >= 2:\n",
+    "            stones.sort()\n",
+    "            max1 = stones.pop(-1)\n",
+    "            max2 = stones.pop(-1)\n",
+    "\n",
+    "            if max1 < max2:\n",
+    "                stones.append(max2 - max1)\n",
+    "            elif max1 > max2:\n",
+    "                stones.append(max1 - max2)\n",
+    "            \n",
+    "        if stones:\n",
+    "            return stones[0]\n",
+    "        return 0\n",
+    "\n",
+    "# status = success\n",
+    "# NOTE: wasn't obvious to me what the time complexity was for this, which is shown right below\n",
+    "# NOTE: also uncessary if statements: max1 can only be greater or equal to max2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "18a0c496-6e93-4540-812a-a68a95037dc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution -> same as mine but written way nicer\n",
+    "# time complexity: O(n^2logn)\n",
+    "# space complexity: O(1) or O(n) depending on sorting algorithm\n",
+    "\n",
+    "class Solution:\n",
+    "    def lastStoneWeight(self, stones: List[int]) -> int:\n",
+    "        \n",
+    "        while len(stones) > 1:\n",
+    "            stones.sort()\n",
+    "            cur = stones.pop() - stones.pop()\n",
+    "            if cur:\n",
+    "                stones.append(cur)\n",
+    "                \n",
+    "        return stones[0] if stones else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "65fed25a-9e42-4020-b6a2-0e1a27fc1325",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution -> heap\n",
+    "class Solution:\n",
+    "    def lastStoneWeight(self, stones: List[int]) -> int:\n",
+    "        stones = [-s for s in stones]      # have to switch their signs, so that heappop() actually returns the biggest original value (which will, technically, after conversion be the smallest number if we think of numbers as smaller as we go torwards -infinity)\n",
+    "        heapq.heapify(stones)\n",
+    "\n",
+    "        while len(stones) > 1:             # loop while there is atleast 2 stones in the heap\n",
+    "            first = heapq.heappop(stones)  \n",
+    "            second = heapq.heappop(stones)\n",
+    "            if second > first:                          # if second is greater than first, that means that original value of first actually greater than second. otherwise it means they're equal and are destroyed\n",
+    "                heapq.heappush(stones, first - second)  # if this gets confusing under pressure can always make the code more verbose by using absolute values for the comparison & computation and converting the number back to negative\n",
+    "\n",
+    "        stones.append(0)      # append a 0 in case no stones remained\n",
+    "        return abs(stones[0]) # can't have negative weight so we return the absolute value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b93fbb-df5f-41b5-b1c4-f4567e14e2bb",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: this problem uses a maxHeap structure which is achieved (in this case?) by reversing all the signs of the original numbers and heapifying the list. then, you want to loop until there is either one or no stones remaining\n",
+    "\n",
+    "you get the two \"biggest\" elements by using heappop() on your heap. typically heappop returns the smallest element but consider what we did before heapifying our list: \n",
+    "* if our list is [2,7,4,1,8,1], the biggest number is 8. \n",
+    "* after conversion, the list becomes [-2,-7,-4,-1,-8,-1], the smallest number is -8\n",
+    "\n",
+    "once you have those, check if second is greater than first. if they are calculate the result of the impact and heappush it to your heap. this can be slightly confusing at first: if we look at our example, first will be -8 and second -7. thinking in regular arithmetics, -7 (second) is bigger than -8 (first), therefore the if block will trigger. pushed to the heap will be -8 -(-7) = -1. we want our numbers to remain negative so that our maxHeap continues to operate as intended. if second isn't greater than first than that MUST mean they are the same weight, therefore are destroyed and we don't want to push to the heap\n",
+    "\n",
+    "to maintain our heap structure, we need to add a 0 to it the end in case there are no remaining stones. then we return the absolute value of the smallest element in the heap, the one at index 0: if they were no stones left, 0 will be returned as it is the only element in the heap. if a stone remained, it's value will still be negative and therefore will be smaller than 0, meaning that this stone will be at index 0 in the heap. we want to return the absolute value because it represents the \"original\" weight. "
    ]
   },
   {
