--- a/neetcodeCont.ipynb
+++ b/neetcodeCont.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "aecabd0f-d8b3-4155-922d-0b828a23be7b",
    "metadata": {},
    "outputs": [],
@@ -351,6 +351,155 @@
     "once you have those, check if second is greater than first. if they are calculate the result of the impact and heappush it to your heap. this can be slightly confusing at first: if we look at our example, first will be -8 and second -7. thinking in regular arithmetics, -7 (second) is bigger than -8 (first), therefore the if block will trigger. pushed to the heap will be -8 -(-7) = -1. we want our numbers to remain negative so that our maxHeap continues to operate as intended. if second isn't greater than first than that MUST mean they are the same weight, therefore are destroyed and we don't want to push to the heap\n",
     "\n",
     "to maintain our heap structure, we need to add a 0 to it the end in case there are no remaining stones. then we return the absolute value of the smallest element in the heap, the one at index 0: if they were no stones left, 0 will be returned as it is the only element in the heap. if a stone remained, it's value will still be negative and therefore will be smaller than 0, meaning that this stone will be at index 0 in the heap. we want to return the absolute value because it represents the \"original\" weight. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d50fa94a-d35f-4010-a642-dc68520d2764",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 973. K Closest Points to Origin (medium)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c309a57-7455-4b10-82b0-a6be661423b4",
+   "metadata": {},
+   "source": [
+    "Given an array of points where points[i] = [xi, yi] represents a point on the X-Y plane and an integer k, return the k closest points to the origin (0, 0).\n",
+    "\n",
+    "The distance between two points on the X-Y plane is the Euclidean distance (i.e., √(x1 - x2)2 + (y1 - y2)2).\n",
+    "\n",
+    "You may return the answer in any order. The answer is guaranteed to be unique (except for the order that it is in)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d8d8bf5b-3fa0-4b69-9f27-064bda347145",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "\n",
+    "class Solution:\n",
+    "    def kClosest(self, points: List[List[int]], k: int) -> List[List[int]]:\n",
+    "        # start with an empty max heap\n",
+    "        # has to be max heap because we want to pop the greatest distance when maintaining length of heap\n",
+    "        maxHeap = []\n",
+    "        heapq.heapify(maxHeap)\n",
+    "        # keep track of points and their distance\n",
+    "        # distance : [point]\n",
+    "        hashmap = defaultdict(list)\n",
+    "\n",
+    "        # iterate through points, calculate distance -> add to heap\n",
+    "        for point in points:\n",
+    "            x = (0 - point[0]) ** 2\n",
+    "            y = (0 - point[1]) ** 2\n",
+    "          \n",
+    "            distance = math.sqrt(x + y)\n",
+    "            # two different points can have the same distance\n",
+    "            hashmap[distance].append(point)\n",
+    "            heapq.heappush(maxHeap, -distance)\n",
+    "\n",
+    "            # keep heap of length k\n",
+    "            if len(maxHeap) > k:\n",
+    "                heapq.heappop(maxHeap)\n",
+    "\n",
+    "        res = []\n",
+    "        # go through the distances in the heap, retrieve through pop -> add to result\n",
+    "        # must pop from dict's list to avoid duplicates\n",
+    "        for dist in maxHeap:\n",
+    "            p = hashmap[-dist].pop()\n",
+    "            res.append(p)\n",
+    "        return res\n",
+    "        \n",
+    "# status = success\n",
+    "# NOTE: this works because we can return answer in any order and the answer is guaranteed to be unique (except for the order that it is in)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e7b39bb1-950f-4bb3-823c-ca6098fcdde3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution -> minHeap\n",
+    "# time complexity: O(k * log n)\n",
+    "# space complexity: O(n)\n",
+    "\n",
+    "class Solution:\n",
+    "    def kClosest(self, points: List[List[int]], k: int) -> List[List[int]]:\n",
+    "        minHeap = []\n",
+    "        for x, y in points:\n",
+    "            dist = (x ** 2) + (y ** 2)\n",
+    "            minHeap.append([dist, x, y])\n",
+    "        \n",
+    "        heapq.heapify(minHeap)\n",
+    "        res = []\n",
+    "        while k > 0:\n",
+    "            dist, x, y = heapq.heappop(minHeap)\n",
+    "            res.append([x, y])\n",
+    "            k -= 1\n",
+    "            \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f432d80d-3069-465c-bfda-52b40782e5df",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: this problem becomes much easier when you understand that a Heap, if containing a list of lists, will have it's sorting property based on the first value within the inner list by default (completely removes the need for a hashmap like i used. also really didn't need to use a maxHeap specificially since we don't need keep heap at length k at all, can easily just use a minHeap)\n",
+    "\n",
+    "begin by creating an empty list (minHeap), which will become a list of lists, then iterate through the points from your input list, calculating the Euclidean distance for each (the calculation is a lot simpler than i thought, although not sure why in this solution you don't need the square root: it's actually because we just need magnitude and not the distance itself). for each point, append to your list the calculated distance, along with the associated x and y value [distance, x ,y]. after that is done and all distances have been calculated, heapify your list.\n",
+    "\n",
+    "initiate another list, your result list, and start a while loop that goes on while k is greater than 0 (each iteration decrements k). in each iteration, pop from your minHeap (it will work correctly because it will pop based on the smallest distance, not looking at x or y), and retrieve the x and y value. append those in a list to your result list [x, y] and decrement k by 1\n",
+    "\n",
+    "return result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a2bbfe84-39e2-4728-9b80-bdf6d6c29acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rework -> just simplified the code in my attempt\n",
+    "\n",
+    "class Solution:\n",
+    "    def kClosest(self, points: List[List[int]], k: int) -> List[List[int]]:\n",
+    "        # start with an empty minHeap\n",
+    "        minHeap = []\n",
+    "        heapq.heapify(minHeap)\n",
+    "        # keep track of points and their distance\n",
+    "        # distance : [point]\n",
+    "        hashmap = defaultdict(list)\n",
+    "\n",
+    "        # iterate through points, calculate distance -> add to heap\n",
+    "        for point in points:\n",
+    "            distance = (point[0] ** 2) + (point[1] ** 2)\n",
+    "            # two different points can have the same distance\n",
+    "            hashmap[distance].append(point)\n",
+    "            heapq.heappush(minHeap, distance)\n",
+    "\n",
+    "        # go through the distances in the heap, retrieve through pop -> add to result\n",
+    "        # must pop from dict's list to avoid duplicates\n",
+    "        res = []\n",
+    "        while k > 0:\n",
+    "            dist = heapq.heappop(minHeap)\n",
+    "            p = hashmap[dist].pop()\n",
+    "            res.append(p)\n",
+    "            k -= 1\n",
+    "\n",
+    "        return res"
    ]
   },
   {
