made a clarification in the explanation of problem 937

--- a/neetcodeCont.ipynb
+++ b/neetcodeCont.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "aecabd0f-d8b3-4155-922d-0b828a23be7b",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,6 @@
    "cell_type": "markdown",
    "id": "d50fa94a-d35f-4010-a642-dc68520d2764",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -456,7 +455,7 @@
    "source": [
     "#### explanation\n",
     "\n",
-    "my own: this problem becomes much easier when you understand that a Heap, if containing a list of lists, will have it's sorting property based on the first value within the inner list by default (completely removes the need for a hashmap like i used. also really didn't need to use a maxHeap specificially since we don't need keep heap at length k at all, can easily just use a minHeap)\n",
+    "my own: this problem becomes much easier when you understand that a Heap, if containing a list of lists, will have it's sorting property based on the first value within the inner list by default (completely removes the need for a hashmap like i used. also really didn't need to use a maxHeap specificially since we don't need keep heap at length k, can easily just use a minHeap - although my approach is apparently more efficient by keeping the heap at length k)\n",
     "\n",
     "begin by creating an empty list (minHeap), which will become a list of lists, then iterate through the points from your input list, calculating the Euclidean distance for each (the calculation is a lot simpler than i thought, although not sure why in this solution you don't need the square root: it's actually because we just need magnitude and not the distance itself). for each point, append to your list the calculated distance, along with the associated x and y value [distance, x ,y]. after that is done and all distances have been calculated, heapify your list.\n",
     "\n",
