--- a/neetcodeCont.ipynb
+++ b/neetcodeCont.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "aecabd0f-d8b3-4155-922d-0b828a23be7b",
    "metadata": {},
    "outputs": [],
@@ -57,6 +57,7 @@
    "cell_type": "markdown",
    "id": "78243158-3989-4ba7-ac21-16716c08f6d1",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -357,6 +358,7 @@
    "cell_type": "markdown",
    "id": "d50fa94a-d35f-4010-a642-dc68520d2764",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -499,6 +501,178 @@
     "            k -= 1\n",
     "\n",
     "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a44c738f-636e-49bb-91ea-f0a71cfa509b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 215. Kth Largest Element in an Array (medium)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2403b095-15ca-43b1-a9a8-a335a6f64168",
+   "metadata": {},
+   "source": [
+    "Given an integer array nums and an integer k, return the kth largest element in the array.\n",
+    "\n",
+    "Note that it is the kth largest element in the sorted order, not the kth distinct element.\n",
+    "\n",
+    "Can you solve it without sorting?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2bc9ab15-18eb-4778-aebf-0a28b2d36068",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "# time complexity: O(n + klogn)\n",
+    "# space complexity: O(n)\n",
+    "\n",
+    "class Solution:\n",
+    "    def findKthLargest(self, nums: List[int], k: int) -> int:\n",
+    "        maxHeap = [-i for i in nums]\n",
+    "        heapq.heapify(maxHeap)\n",
+    "        res = None\n",
+    "\n",
+    "        while k > 0:\n",
+    "            res = -(heapq.heappop(maxHeap))\n",
+    "            k -= 1\n",
+    "\n",
+    "        return res\n",
+    "    \n",
+    "# status = success\n",
+    "# NOTE: am i missing something? too easy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f1eb4973-189e-45cb-a5af-23949e1e6b81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "class Solution:\n",
+    "    def findKthLargest(self, nums, k):\n",
+    "        return heapq.nlargest(k, nums)[-1] # the -1 indexing is explained by the code below the explanation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fac6c45-341f-432e-9bd0-7199ac596aa8",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: the first solution can just be explained by the documentation of heapq:\n",
+    "\n",
+    "heapq.nlargest(n, iterable, key=None)\n",
+    "\n",
+    "    Return a list with the n largest elements from the dataset defined by iterable. key, if provided, specifies a function of one argument that is used to extract a comparison key from each element in iterable (for example, key=str.lower). Equivalent to: sorted(iterable, key=key, reverse=True)[:n]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5f14edef-4d34-44fa-845e-58e4168311d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inst = Solution()\n",
+    "test = [4,7,2,3,8,5]\n",
+    "\n",
+    "res = inst.findKthLargest(test, 3)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "95b024c7-0fe3-4a18-950c-360c0c86fe3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 7, 5]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapq.heapify(test)\n",
+    "heapq.nlargest(3, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c3b838dd-52b3-4e87-9789-b932c412d544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution -> quick select\n",
+    "# time complexity: O(n) on average, O(n**2) worst case\n",
+    "# space complexity: O(n)\n",
+    "\n",
+    "class Solution:\n",
+    "\n",
+    "    def findKthLargest(self, nums: List[int], k: int) -> int:\n",
+    "        k = len(nums) - k\n",
+    "        \n",
+    "        def quickSelect(l, r):\n",
+    "            pivot, p = nums[r], l\n",
+    "            for i in range(l, r):\n",
+    "                if nums[i] <= pivot:\n",
+    "                    # swapping\n",
+    "                    nums[p], nums[i] = nums[i], nums[p]\n",
+    "                    p += 1\n",
+    "                             # this nums[r] is actually equal to pivot value at this point\n",
+    "            nums[p], nums[r] = nums[r], nums[p]\n",
+    "\n",
+    "            if p > k: \n",
+    "                return quickSelect(l, p - 1)\n",
+    "            elif p < k:\n",
+    "                return quickSelect(p + 1, r)\n",
+    "            else:\n",
+    "                return nums[p]\n",
+    "\n",
+    "        return quickSelect(0, len(nums) - 1)\n",
+    "    \n",
+    "# NOTE: this is just to learn. this actually triggers a TLE on leetcode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f80f16a7-5232-4faf-a251-a08736c7f1c6",
+   "metadata": {},
+   "source": [
+    "this problem is actually about the <u>quick select</u> recursive algorithm (which will be explained below) since nlargest method is equivalent to sorted\n",
+    "\n",
+    "generally speaking, quick select will choose a value from the array which will act as our \"pivot\" and will use it to partition the array in 2 halves. the way the array is partioned is every value to the left will be smaller than the pivot, and every value to the right will be greater than the pivot (note that each partition are not necessarily sorted, they must just fit the condition just described). in this case the algorithm iterates through the range of the array and uses a pointer which represents at index (at the very beginning starts at index 0) that increments by 1 every time it finds a lower or equal to the pivot. [swapping happens]. if at the end of the loop the pointer is at an index equal to len(nums) - k (k elements from the end of the array), that means you have found the kth largest value: the value at the index of the pointer. otherwise the recursion start and you must call quick select again and adjust your ranges"
    ]
   },
   {
