--- a/neetcodeCont.ipynb
+++ b/neetcodeCont.ipynb
@@ -672,7 +672,139 @@
    "source": [
     "this problem is actually about the <u>quick select</u> recursive algorithm (which will be explained below) since nlargest method is equivalent to sorted\n",
     "\n",
-    "generally speaking, quick select will choose a value from the array which will act as our \"pivot\" and will use it to partition the array in 2 halves. the way the array is partioned is every value to the left will be smaller than the pivot, and every value to the right will be greater than the pivot (note that each partition are not necessarily sorted, they must just fit the condition just described). in this case the algorithm iterates through the range of the array and uses a pointer which represents at index (at the very beginning starts at index 0) that increments by 1 every time it finds a lower or equal to the pivot. [swapping happens]. if at the end of the loop the pointer is at an index equal to len(nums) - k (k elements from the end of the array), that means you have found the kth largest value: the value at the index of the pointer. otherwise the recursion start and you must call quick select again and adjust your ranges"
+    "generally speaking, quick select will choose a value from the array which will act as our \"pivot\" and will use it to partition the array in 2 halves. the way the array is partioned is every value to the left will be smaller than the pivot, and every value to the right will be greater than the pivot (note that each partition are not necessarily sorted, they must just fit the condition just described). in this case the algorithm iterates through the range of the array and uses a pointer which represents at index (at the very beginning starts at index 0) that increments by 1 every time it finds a lower or equal to the pivot. [swapping happens]. if at the end of the loop the pointer is at an index equal to len(nums) - k (k elements from the end of the array), that means you have found the kth largest value: the value at the index of the pointer. otherwise the recursion start and you must call quick select again and adjust your ranges. the way the ranges work is similar to how binary search operates, where you will only want to look at one of the partition depending on which of the if statement was triggered (this doesn't apply to the else statement in the code, that means you found your answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d70a52bb-9feb-4977-a363-d7ca656c8605",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 621. Task Scheduler (medium)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfec26a7-0541-4dd2-a3f6-1ad3f1e79df1",
+   "metadata": {},
+   "source": [
+    "You are given an array of CPU tasks, each labeled with a letter from A to Z, and a number n. Each CPU interval can be idle or allow the completion of one task. Tasks can be completed in any order, but there's a constraint: there has to be a gap of at least n intervals between two tasks with the same label.\n",
+    "\n",
+    "Return the minimum number of CPU intervals required to complete all tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9387175b-13a5-40dc-b260-966ce8e3dd29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "\n",
+    "class Solution:\n",
+    "    def leastInterval(self, tasks: List[str], n: int) -> int:\n",
+    "        queue = [[0, t] for t in tasks]\n",
+    "        heapq.heapify(queue)\n",
+    "\n",
+    "        intervals = 0\n",
+    "        while queue:\n",
+    "            # if first item in queue is ready to go\n",
+    "            if queue[0][0] == 0:   \n",
+    "                task = heapq.heappop(queue)\n",
+    "                for t in queue:\n",
+    "                    if t[1] == task[1]:\n",
+    "                        t[0] = n+1\n",
+    "            # reduce cooldown\n",
+    "            for t in queue:\n",
+    "                if t[0] != 0:\n",
+    "                    t[0] -= 1\n",
+    "            # keep the heap structure after modifications\n",
+    "            heapq.heapify(queue)\n",
+    "\n",
+    "            intervals += 1\n",
+    "\n",
+    "        return intervals\n",
+    "    \n",
+    "# status = failure\n",
+    "# NOTE: doesn't quite work... but close. doesn't reliably return the minimum interval\n",
+    "# NOTE: needed some logic to prioritize the most frequent tasks first, not just whatever task is ready"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c00c2355-f6dd-4c01-bc41-0f7306555f61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "class Solution:\n",
+    "    def leastInterval(self, tasks: List[str], n: int) -> int:\n",
+    "        count = Counter(tasks)\n",
+    "        maxHeap = [-cnt for cnt in count.values()]\n",
+    "        heapq.heapify(maxHeap)\n",
+    "\n",
+    "        time = 0\n",
+    "        q = deque()  # pairs of [-cnt, idleTime]\n",
+    "        while maxHeap or q:\n",
+    "            time += 1\n",
+    "\n",
+    "            # if there are no items in the maxHeap we need to idle (meaning there are no tasks ready to be run)\n",
+    "            # by grabbing the time of the next task ready to be run, we can skip idle iterations\n",
+    "            if not maxHeap:\n",
+    "                time = q[0][1]\n",
+    "            else:\n",
+    "                # this else block actually symbolizes a task being processed\n",
+    "                # the count is incremented by 1 since we're using a maxHeap in python: the sign of each count has been reversed since python doesn't actually have a maxHeap\n",
+    "                cnt = 1 + heapq.heappop(maxHeap)\n",
+    "                # don't append back into q if the count is at 0\n",
+    "                if cnt:\n",
+    "                    # we take the current time + the cooldown value to know when the task will be ready to be run again\n",
+    "                    q.append([cnt, time + n])\n",
+    "            # if the first task's time in the q is equal to the current time it means it's ready to be ran and can be placed back in the maxHeap\n",
+    "            if q and q[0][1] == time:\n",
+    "                heapq.heappush(maxHeap, q.popleft()[0])\n",
+    "        return time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "87ffff8c-3079-456f-ac54-d11fb623605d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'A': 2, 'B': 1, 'C': 1})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# example of Counter\n",
+    "tasks = ['A', 'A', 'B', 'C']\n",
+    "count = collections.Counter(tasks)\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9758ec38-76bf-4413-bf8e-59cd936aafd2",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: this problem is actually quite tough, and the solution is not very intuitive because we keep track of the count of each task instead of the letters themselves (which was the logic my solution was missing to find the smallest interval possible). as a result i will explain the intuition instead of the code itself. the code will have comments that will supplement the explanation. \n",
+    "\n",
+    "to keep track of the count of a task and when this task is ready, we use both a maxHeap which will only store the count of a task (and will actually be what we use to \"process\" tasks) and a queue which will store a list of lists, each list containing the count of a task and the time when it will be ready to be run. then we will start a while loop that goes on while there are items in our maxHeap or our queue. we know if a task is ready to be run by keeping track of the current time using a time variable initialized at 0 before the loop starts, incrementing it by 1 each iteration: when a task is processed (at the beginning, every task is ready to be processed therefore we want to take the task with the greatest count), we use our queue to put it back in (unless the task count is now at 0), this time updating when it's ready to be run by using current time + n (which is the cooldown period). if the task's time is equal to the current time, it's ready to be processed. when there are no more items in both our maxHeap and our queue it means all tasks have been processed and we can return the time which will represent the intervals that occured."
    ]
   },
   {
