--- a/neetcodeCont.ipynb
+++ b/neetcodeCont.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "aecabd0f-d8b3-4155-922d-0b828a23be7b",
    "metadata": {},
    "outputs": [],
@@ -805,6 +805,210 @@
     "my own: this problem is actually quite tough, and the solution is not very intuitive because we keep track of the count of each task instead of the letters themselves (which was the logic my solution was missing to find the smallest interval possible). as a result i will explain the intuition instead of the code itself. the code will have comments that will supplement the explanation. \n",
     "\n",
     "to keep track of the count of a task and when this task is ready, we use both a maxHeap which will only store the count of a task (and will actually be what we use to \"process\" tasks) and a queue which will store a list of lists, each list containing the count of a task and the time when it will be ready to be run. then we will start a while loop that goes on while there are items in our maxHeap or our queue. we know if a task is ready to be run by keeping track of the current time using a time variable initialized at 0 before the loop starts, incrementing it by 1 each iteration: when a task is processed (at the beginning, every task is ready to be processed therefore we want to take the task with the greatest count), we use our queue to put it back in (unless the task count is now at 0), this time updating when it's ready to be run by using current time + n (which is the cooldown period). if the task's time is equal to the current time, it's ready to be processed. when there are no more items in both our maxHeap and our queue it means all tasks have been processed and we can return the time which will represent the intervals that occured."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a0433ce-6ee4-4c2b-b9ab-ec6f9c6f746a",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 355. Design Twitter (medium)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07c1d8d7-1a9c-4fee-9a7c-3fa4585b5ea9",
+   "metadata": {},
+   "source": [
+    "Design a simplified version of Twitter where users can post tweets, follow/unfollow another user, and is able to see the 10 most recent tweets in the user's news feed.\n",
+    "\n",
+    "Implement the Twitter class:\n",
+    "\n",
+    "* Twitter() Initializes your twitter object.\n",
+    "* void postTweet(int userId, int tweetId) Composes a new tweet with ID tweetId by the user userId. Each call to this function will be made with a unique tweetId.\n",
+    "* List<Integer> getNewsFeed(int userId) Retrieves the 10 most recent tweet IDs in the user's news feed. Each item in the news feed must be posted by users who the user followed or by the user themself. Tweets must be ordered from most recent to least recent.\n",
+    "* void follow(int followerId, int followeeId) The user with ID followerId started following the user with ID followeeId.\n",
+    "* void unfollow(int followerId, int followeeId) The user with ID followerId started unfollowing the user with ID followeeId."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "156495aa-a38d-4f95-921d-9743a15f067d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "\n",
+    "class Twitter:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # what does users need? an id, a list of tweets, a list of following\n",
+    "        self.users = defaultdict(lambda: {'tweets': [], 'following': []})\n",
+    "        self.time = 1\n",
+    "        \n",
+    "\n",
+    "    def postTweet(self, userId: int, tweetId: int) -> None:\n",
+    "        self.users[userId]['tweets'].append([time, tweetId])\n",
+    "        self.time += 1\n",
+    "\n",
+    "    def getNewsFeed(self, userId: int) -> List[int]:\n",
+    "        lst = self.users[userId]['tweets']\n",
+    "        for following in self.users[userId]['following']:\n",
+    "            lst = lst + (self.users[following]['tweets'])\n",
+    "        heapq.heapify(lst)\n",
+    "        res = []\n",
+    "        while lst and len(res) <= 10:\n",
+    "            tweet = heapq.heappop(lst)\n",
+    "            res.append(tweet[1])\n",
+    "        return res\n",
+    "\n",
+    "    def follow(self, followerId: int, followeeId: int) -> None:\n",
+    "        self.users[followerId]['following'].append(followeeId)\n",
+    "\n",
+    "    def unfollow(self, followerId: int, followeeId: int) -> None:\n",
+    "        self.users[followerId]['following'].remove(followeeId)\n",
+    "\n",
+    "# status = failure\n",
+    "# NOTE: the getNewsFeed isn't behaving how i am expecting it too, i believe it is modifying the users dictionary itself which it isn't supposed to\n",
+    "# NOTE: also i was getting the oldest tweets instead of most recent using my heap\n",
+    "# NOTE: my way of handling follows and unfollows was also not the best, set would've been better since we can't follow the same person twice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "49dfb7c6-285d-4894-bcc3-3ebffff8153e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt 2\n",
+    "\n",
+    "class Twitter:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        # what does users need? an id, a list of tweets, a list of following\n",
+    "        self.users = defaultdict(lambda: {'tweets': [], 'following': set()})\n",
+    "        self.time = 1\n",
+    "        \n",
+    "\n",
+    "    def postTweet(self, userId: int, tweetId: int) -> None:\n",
+    "        self.users[userId]['tweets'].append([self.time, tweetId])\n",
+    "        self.time -= 1 # decrement because we want the getNewsFeed() method to get most recent tweets, not oldest\n",
+    "\n",
+    "    def getNewsFeed(self, userId: int) -> List[int]:\n",
+    "        temp = self.users[userId]['tweets'] # need this temp list and iterate through it to begin building our heap to avoid modifying self.users\n",
+    "        heap = []\n",
+    "        for tweets in temp:\n",
+    "            heap.append(tweets)\n",
+    "        for following in self.users[userId]['following']:\n",
+    "            heap = heap + (self.users[following]['tweets'])\n",
+    "        heapq.heapify(heap)\n",
+    "        res = []\n",
+    "        while heap and len(res) < 10:\n",
+    "            tweet = heapq.heappop(heap)\n",
+    "            res.append(tweet[1])\n",
+    "        return res\n",
+    "\n",
+    "    def follow(self, followerId: int, followeeId: int) -> None:\n",
+    "        self.users[followerId]['following'].add(followeeId)\n",
+    "\n",
+    "    def unfollow(self, followerId: int, followeeId: int) -> None:\n",
+    "        if followeeId in self.users[followerId]['following']:\n",
+    "            self.users[followerId]['following'].remove(followeeId)\n",
+    "            \n",
+    "# status = success"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "307c3bd1-449f-4f3a-a164-7b0b05f17451",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>()>,\n",
+       "            {1: {'tweets': [1, 3], 'following': set()},\n",
+       "             2: {'tweets': [5], 'following': {1}}})"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# example of how users work\n",
+    "users = collections.defaultdict(lambda: {'tweets': [], 'following': set()})\n",
+    "users[1]['tweets'].append(1)\n",
+    "users[1]['tweets'].append(3)\n",
+    "users[2]['tweets'].append(5)\n",
+    "users[2]['following'].add(1)\n",
+    "users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c18f2f4c-ed05-4c72-84c1-74732cb71919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "# time complexity: O(n) for each getNewsFeed() call and O(1) for remaining methods\n",
+    "# space complexity: O(N * m + N * M + n) -> where n is the total number of followeeIds associated with the userId, m is the maximum number of tweets by any users, ...\n",
+    "# ... N is the total number of userIds and M is the maximum number of followees for any users\n",
+    "\n",
+    "class Twitter:\n",
+    "    def __init__(self):\n",
+    "        self.count = 0\n",
+    "        self.tweetMap = defaultdict(list)  # userId -> list of [count, tweetIds]\n",
+    "        self.followMap = defaultdict(set)  # userId -> set of followeeId\n",
+    "\n",
+    "    def postTweet(self, userId: int, tweetId: int) -> None:\n",
+    "        self.tweetMap[userId].append([self.count, tweetId])\n",
+    "        self.count -= 1\n",
+    "\n",
+    "    def getNewsFeed(self, userId: int) -> List[int]:\n",
+    "        res = [] # ordered starting from recent\n",
+    "        minHeap = []\n",
+    "\n",
+    "        self.followMap[userId].add(userId)\n",
+    "        for followeeId in self.followMap[userId]:\n",
+    "            if followeeId in self.tweetMap:\n",
+    "                index = len(self.tweetMap[followeeId]) - 1\n",
+    "                count, tweetId = self.tweetMap[followeeId][index]\n",
+    "                heapq.heappush(minHeap, [count, tweetId, followeeId, index - 1])\n",
+    "\n",
+    "        while minHeap and len(res) < 10:\n",
+    "            count, tweetId, followeeId, index = heapq.heappop(minHeap)\n",
+    "            res.append(tweetId)\n",
+    "            if index >= 0:\n",
+    "                count, tweetId = self.tweetMap[followeeId][index]\n",
+    "                heapq.heappush(minHeap, [count, tweetId, followeeId, index - 1])\n",
+    "        return res\n",
+    "\n",
+    "    def follow(self, followerId: int, followeeId: int) -> None:\n",
+    "        self.followMap[followerId].add(followeeId)\n",
+    "\n",
+    "    def unfollow(self, followerId: int, followeeId: int) -> None:\n",
+    "        if followeeId in self.followMap[followerId]:\n",
+    "            self.followMap[followerId].remove(followeeId)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed79fca-8fde-435c-b9c2-0e517b78bf81",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: i won't go into too much detail about the neetcode solution because what it does is very very similar as my solution (potentially more optimized - hard to tell), but my code is self explanatory and easier to read in my opinion, and performance seems quite similar. the main difference between my second attempt and the neetcode solution is that the users dictionnary i used is split into a tweetMap and followMap. postTweet(), follow(), and unfollow() basically are the same but with the corresponding maps. getNewsFeed() operates differently because a slightly different strategy is used to get most recent tweets and a few other variables are tracked, but it has the same idea as my method by getting the 10 most recent tweets using a minHeap and storing them in a res list, returning that list when either the heap is empty or the list has 10 tweets."
    ]
   },
   {
